--- a/EnlaceDocumentacion.html
+++ b/EnlaceDocumentacion.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="refresh"
-        content="0;url=https://docs.google.com/document/d/1axm2lGASmsO0FkgP_LuOzZrzYhXfqFnB4rMcRrYaIo8/edit?usp=sharing">
+        content="0;url=https://docs.google.com/document/d/1fYjPJnBXXabiXbtqP8fNKxdZ-X9CXQ14PZGefzGl370">
     <title>Redirecting...</title>
 </head>
 
 <body>
     <p>If you are not redirected, <a
-            href="https://docs.google.com/document/d/1axm2lGASmsO0FkgP_LuOzZrzYhXfqFnB4rMcRrYaIo8/edit?usp=sharing">click
+            href="https://docs.google.com/document/d/1fYjPJnBXXabiXbtqP8fNKxdZ-X9CXQ14PZGefzGl370">click
             here</a>.</p>
 </body>
 
